--- a/escher/Makefile
+++ b/escher/Makefile
@@ -1,5 +1,23 @@
 SFLAGS += -Iescher/include
 
+ifeq ($(THEME_REPO),local)
+$(eval $(call rule_for, \
+  THEME, \
+  escher/palette.h, \
+  $(addprefix themes/themes/local/, $(addsuffix .json, $(THEME_NAME))), \
+  $$(PYTHON) themes/themes_manager.py $(THEME_REPO) $(THEME_NAME) $$@ $(BUILD_DIR)/, \
+  global \
+))
+else
+$(eval $(call rule_for, \
+  THEME, \
+  escher/palette.h, \
+  themes/themes/git/.empty-folder, \
+  $$(PYTHON) themes/themes_manager.py $(THEME_REPO) $(THEME_NAME) $$@ $(BUILD_DIR)/, \
+  global \
+))
+endif
+
 escher_src += $(addprefix escher/src/,\
   abstract_button_cell.cpp \
   abstract_text_field.cpp \
@@ -125,8 +143,8 @@ INLINER_ARGS ?=
 .PRECIOUS: $(BUILD_DIR)/%.h $(BUILD_DIR)/%.cpp
 $(eval $(call rule_for, \
   INLINER, \
-  %.cpp, \
-  %.png $$(INLINER), \
+  %.h %.cpp, \
+  $(BUILD_DIR)/%.png $$(INLINER), \
   $$(INLINER) $$< $$(basename $$@).h $$(basename $$@).cpp $$(INLINER_ARGS), \
   global \
 ))
@@ -141,6 +159,7 @@ define depends_on_image
 $(call object_for,$(1)): $(call object_for,$(2))
 $(call object_for,$(1)): SFLAGS += $(foreach d,$(sort $(dir $(call object_for,$(1)))),-I$(d))
 escher_src += $(2)
+image_list += $(2)
 endef
 
 define depends_on_transparent_image
